--- a/src/App.css
+++ b/src/App.css
@@ -27,3 +27,10 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.Snowman-board {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  
+}
